update websocket and create fix websocket in admin and create line chart on admin page. on staff page add function staff can manage their own calendar can update result and create new check schedule for customer and staff can manage consultation schedule and create new consultation schedule for customer  and edit staff page have create test schedule and consultation schedule. feature is staff can see staff's schedule and can change consultant schedule